<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d8000000"
        android:gravity="center"
        android:layout_height="match_parent">

      <ImageView
          android:layout_width="100dp"
          android:layout_height="110dp"
          android:layout_marginBottom="50dp"
          android:background="@android:color/transparent"
          android:src="@drawable/pngegg"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/ir_login"
            android:layout_marginLeft="20dp"
            android:text="@string/iniciar"
            android:backgroundTint="#365728"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/iniciar_facebook"
            android:text="@string/facebook"
            android:elevation="5dp"
            android:backgroundTint="#3b5998"
            android:textAllCaps="false"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/google"
            android:backgroundTint="#ccc"
            android:textColor="@color/black"
            />




    </LinearLayout>
</RelativeLayout>